crates/ruff_python_parser/tests/snapshots/valid_syntax@param_with_star_annotation.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..67,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..31,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..26,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 8..25,
                                node_index: NodeIndex(None),
                                name: Identifier {
                                    id: Name("args"),
                                    range: 9..13,
                                    node_index: NodeIndex(None),
                                },
                                annotation: Some(
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 15..25,
                                            value: BinOp(
                                                ExprBinOp {
                                                    node_index: NodeIndex(None),
                                                    range: 16..25,
                                                    left: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 16..19,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    op: BitOr,
                                                    right: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 22..25,
                                                            id: Name("str"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                runtime_type_comment: None,
                                runtime_type_comment_bytes: None,
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 28..31,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 28..31,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 32..66,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 36..39,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 39..61,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 40..60,
                                node_index: NodeIndex(None),
                                name: Identifier {
                                    id: Name("args"),
                                    range: 41..45,
                                    node_index: NodeIndex(None),
                                },
                                annotation: Some(
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 47..60,
                                            value: BoolOp(
                                                ExprBoolOp {
                                                    node_index: NodeIndex(None),
                                                    range: 49..59,
                                                    op: Or,
                                                    values: [
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 49..52,
                                                                id: Name("int"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 56..59,
                                                                id: Name("str"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    runtime_values: None,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                runtime_type_comment: None,
                                runtime_type_comment_bytes: None,
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 63..66,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 63..66,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
